<resources>
    <string name="app_name">Elver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="animal">Bulduğunuz hayvanın konumunu seçiniz.</string>
    <string name="requirement">Yardıma ihtiyacınız olan konumu seçiniz.</string>
    <string name="password">Şifre</string>
    <string name="forgot_password">Şifreni Mi Unuttun?</string>
    <string name="login">Giriş Yap</string>
    <string name="or_sign_up_using">Or Sign Up Using</string>
    <string name="create_a_new_account">Yeni Bir Hesap Oluştur</string>
    <string name="sign_up">Kaydol</string>
    <string name="fill_in_the_blanks">Boşlukları doldurun!</string>
    <string name="name">İsim</string>
    <string name="surname">Soyisim</string>
    <string name="e_mail">E mail</string>
    <string name="repeat_password">Şifre Tekrarı</string>
    <string name="phone_number">Telefon Numarası</string>
    <string name="register">Kaydol</string>
    <string name="already_have_an_account">Zaten Hesabın Var Mı</string>
    <string name="your_profile">Profilin</string>
    <string name="emergency_help">Acil Yardım</string>
    <string name="give_a_hand">Yardım Et</string>
    <string name="home">Ana Ekran</string>
    <string name="get_help">Yardım istemek için lütfen butona tıklayınız</string>
    <string name="emergency_button">Acil Yardım Butonu</string>
    <string name="image">image</string>
    <string name="gallery_permission">Lütfen galeri izni veriniz.</string>
    <string name="give_permission">İzin Ver.</string>
    <string name="select_picture">Lütfen bir resim seçin.</string>
    <string name="password_must_match">Şifreler aynı olmalıdır!</string>
    <string name="welcome">Hoş Geldin</string>
    <string name="what_to_do_in_an_emergency">Acil Durumda Ne Yapmalıyız?</string>
    <string name="when_should_i_call_112">112\'yi Ne Zaman Aramalıyız?</string>
    <string name="got_it">Anladım</string>


    <string name="what_to_do_in_an_emergency_description">
        Zamanında hastaya müdahalede bulunmak hayat ve ölüm arasındaki çizgiyi belirler. Acil bir sağlık durumu ile karşılaştığımızda ilk olarak ambulansı ararız. Ambulansın gelmesini beklerken yapmamız gereken hastayı  rahatlatmak olmalıdır.  Bu süre içerisinde ne yapacağımızı bilmek hastanın hayatı için hayati öneme sahiptir. Eğer ne yapmamız gerektiğini bilirsek, gerçekten bir hayat kurtarıyor olabiliriz.
    </string>
    <string name="when_should_i_call_122_description">
        Eğer kişi aşağıdaki durumlardan şikayet ediyorsa 112\'yi arayınız.
        Göğüs bölgesinde ezilme hissi.Nefes almada zorluk.Yaraya direkt baskı uygulayınca kontrol edilemeyen kanama.
        Şiddetli yanıklar veya haşlanmalar.
        Boğulma.
        Bilinç kaybı.
        Şiddetli alerjik tepkime.
        5 dakikadan daha fazla süren bir sara nöbeti ya da bilinmeyen bir nöbet.
        Diğer acil tıbbi durumlarda kendinize şu soruyu sorunuz:
        Aile doktoru veya tıbbi eğitim almış bir kişiden yardım/tavsiye alabilir miyim? Eğer cevap hayır ise acil servisi arayınız.
    </string>
    <string name="delete_my_account">Hesabımı Sil</string>
    <string name="deletion_success">Hesap Silme Başarılı</string>
    <string name="try_again_later">Sonra tekrar deneyiniz.</string>
    <string name="yes">Evet</string>
    <string name="are_you_want_to_delete_account">Hesabını silmek istiyor musun?</string>
    <string name="permissionDenied">İzin Reddedildi!</string>
    <string name="notification">Bildirimler</string>
    <string name="how_many_people">Kaç Kişinin Yardıma İhtiyacı Var?</string>
    <string name="animaltype">Hayvanın Türü Nedir?</string>
    <string name="select_location">Konum Seç</string>
    <string name="have_a_wound">Herhangi bir yarası bulunuyor mu?</string>
    <string name="any_burns_on_your_body">Bedeninde yanık bulunuyor mu?</string>
    <string name="have_a_tremors">Vücudunda titreme var mı?</string>
    <string name="help_request_received">Yardım Talebi Alındı.</string>
    <string name="organization">Organization</string>
    <string name="emergency_news">Acil Durum Haberleri</string>
    <string name="next">Devam et</string>
    <string name="cleaning_materials">Hijyen Malzemeleri</string>
    <string name="blanket">Uyku Tulumu veya Battaniye</string>
    <string name="clothes">Giyim</string>
    <string name="food_water">Gıda ve Su</string>
    <string name="tent">Çadır</string>
    <string name="requirement_request">Yardım İsteği Gönder</string>
    <string name="send_emergency">Acil Yardım Gönder</string>
    <string name="no">Hayır</string>
    <string name="are_you_sure_send_emergency_message">"Acil Yardım İstediğinize Emin Misiniz? "</string>
    <string name="success">Acil Durum Bildirimi Gönderildi</string>
    <string name="show_on_map">Haritada Göster</string>
</resources>