<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/aidSelectFragment"
        android:icon="@drawable/emergency_area"
        android:title="@string/emergency_help" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/notification"
        android:title="@string/notification" />

    <item
        android:id="@+id/needyListFragment"
        android:icon="@drawable/give_a_hand"
        android:title="@string/give_a_hand" />

    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/userprofile"
        android:title="@string/your_profile" />
</menu>